fixes a flex box bug on safari

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,4 @@
 header {
-  display: flex;
-  flex-direction: column;
-  flex: 0;
   font-family: "Bangers", Arial Black;
   margin: 10px 0;
   text-align: center;
